@@ -19,6 +19,7 @@
     ---------------------------------------------------------------------- */
 
 #include <glib/gi18n.h>
+#include <stdlib.h>
 #include "gtk/gtk.h"
 #include "logview.h"
 #include "calendar.h"
